# ETL-Identity-Data-Ruleset-Engine

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SAFETY.md  SECURITY.md  deep-research-report.md  manage_public_safety_demo.py  pipeline_architecture.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: benchmark_fixtures.yml  blocking_rules.yml  export_jobs.yml  matching_rules.yml  normalization_rules.yml  runtime_environments.yml  survivorship_rules.yml  thresholds.yml
deploy/: cjis.env.example  compose.yaml  container.env.example
docs/: architecture.md  benchmarking-and-capacity.md  cad-source-contract.md  cjis-deployment-baseline.md  cjis-evidence-cadence.md  compatibility-policy.md  container-deployment.md  customer-handoff-package.md  customer-pilot-acceptance-checklist.md  customer-pilot-bundle.md  customer-pilot-readiness.md  customer-pilot-runbooks.md  data-model.md  delivery-contracts.md  encrypted-backup-bundles.md  evaluation-and-metrics.md  event-stream-ingestion.md  export-jobs.md  kubernetes-deployment.md  kubernetes-ha-deployment.md  live-acceptance-packages.md  live-landed-input-custody.md  live-target-packs.md  matching-and-thresholds.md  normalization.md  operations-observability.md  output-contracts.md  persistent-state.md  production-acceptance-suite.md  production-batch-manifest.md  production-operating-model.md  protected-pilot-promotion.md  public-safety-demo.md  public-safety-onboarding.md  public-safety-vendor-profiles.md  recovery-runbooks.md  release-process.md  review-workflow.md  rms-source-contract.md  runtime-environments.md  (+4 more)
planning/: active-github-issues-backlog.md  github-issues-backlog.md  post-v0.1.0-github-issues-backlog.md  post-v0.6.0-github-issues-backlog.md  post-v0.9.0-github-issues-backlog.md  post-v1.2.0-github-issues-backlog.md  post-v1.4.0-github-issues-backlog.md  post-v1.5.0-github-issues-backlog.md  project-structure-outline.md  remaining-work-task-list.md
scripts/: bootstrap_venv.ps1  bootstrap_venv.sh  bootstrap_windows_customer_pilot.ps1  bootstrap_windows_customer_pilot.py  build_public_safety_demo_site.py  check_customer_pilot_readiness.ps1  check_customer_pilot_readiness.py  cjis_preflight_check.py  container_smoke_test.py  container_supply_chain_check.py  create_github_backlog.ps1  create_github_backlog.py  install_gh_cli.ps1  install_gh_cli.sh  kubernetes_manifest_smoke.py  manage_cjis_evidence_cadence.py  manage_windows_customer_pilot_services.py  package_cjis_evidence_pack.py  package_customer_pilot_bundle.py  package_customer_pilot_support_bundle.py  package_public_safety_demo.py  package_release_sample.py  patch_upgrade_customer_pilot.py  persisted_state_recovery_smoke.py  postgresql_ha_rehearsal.py  production_acceptance_suite.py  release_hardening_check.py  restore_encrypted_bundle.py  run_checks.ps1  run_checks.py  run_checks.sh  run_pipeline.ps1  run_pipeline.py  run_pipeline.sh  run_public_safety_demo_shell.py  seal_protected_pilot_promotion.py  verify_github_issue_metadata.py  verify_handoff_signature.py
tests/: conftest.py  public_safety_regression_fixture.py  test_batch_manifest.py  test_benchmark_runtime.py  test_benchmarking.py  test_io_read.py  (+54 more)
(+165 files in other folders)
