[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etl-identity-engine"
version = "1.0.0"
description = "Synthetic ETL identity resolution prototype."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "ETL Identity Data Ruleset Engine Contributors" }
]
dependencies = [
  "alembic>=1.14.0",
  "Django>=5.2,<5.3",
  "fastapi>=0.115.0",
  "fsspec>=2024.6.0",
  "psycopg[binary]>=3.2.3",
  "PyJWT>=2.9.0",
  "pyarrow>=16.0.0",
  "PyYAML>=6.0.2",
  "SQLAlchemy>=2.0.36",
  "uvicorn>=0.30.6"
]

[project.optional-dependencies]
object-storage = [
  "s3fs>=2024.6.0"
]
dev = [
  "build>=1.2.2",
  "httpx>=0.27.0",
  "pip-audit>=2.7.3",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0"
]

[project.scripts]
etl-identity-engine = "etl_identity_engine.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"etl_identity_engine.demo_shell" = ["templates/demo_shell/*.html"]
"etl_identity_engine.ingest" = ["vendor_profiles/cad/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["etl_identity_engine"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
